...
        startDate.month == today.month &&
        startDate.day == today.day) {
      textStartDate = 'Hoje';
    } else if (startDate.year == tomorrow.year &&
        startDate.month == tomorrow.month &&
        startDate.day == tomorrow.day) {
      textStartDate = 'Amanhã';
    } else {
      final day = startDate.day.toString().padLeft(2, '0');
      final month = startDate.month.toString().padLeft(2, '0');
      final year = startDate.year;
      textStartDate = '$day/$month/$year';
    }
...
      children: [
        CommonCreateHabitTitle(
          titleText: 'Defina o início da sua \n atividade:',
        ),
        // Data de Inicio
        _buildListTile(
          actionKey: const Key('start_date_option'),
          context: context,
          leadingIcon: Icons.calendar_month,
          tileTitle: 'Data de início',
          selectedDate: textStartDate,
          isSelected: true,
          onTap: () async {
...
          onClear: () {
            ref.read(draftHabitProvider.notifier).clearEndDate();
          },
        ),
        // Horário de Lembrte
        _buildListTile(
          actionKey: const Key('reminder_time_option'),
          context: context,
          leadingIcon: Icons.notification_add,
          tileTitle: 'Horário do lembrete',
          selectedDate: reminderText,
          isSelected: isReminderSelected,
          onClear: () {
...
    required String tileTitle,
    required bool isStreakEnabled,
  }) {
    return Padding(
      padding: EdgeInsetsGeometry.symmetric(vertical: 8, horizontal: 8),
      child: SwitchListTile(
        key: const Key('streak_notification_switch'),
        activeThumbColor: Colors.white,
        activeTrackColor: AppColors.positiveActionDialogTextColor,
        inactiveThumbColor: Colors.black87,
        inactiveTrackColor: AppColors.cardBackgrounColor,
        secondary: Icon(
          secondaryIcon,
...
