...

    return Column(
      crossAxisAlignment: CrossAxisAlignment.center,
      children: [
        CommonCreateHabitTitle(titleText: 'Como vai ser o seu hábito?'),
        _buildTextInputCard(
          key: const ValueKey('input_name'),
          context: context,
          value: draftState.name,
          onChanged: (newName) {
            ref.read(draftHabitProvider.notifier).updateName(newName);
          },
          label: 'Ex: Treino de Musculação...',
...
