...
              ),
            ),
        ],
      ),
      floatingActionButton: currentTab == 0
          ? FloatingActionButton(
              key: const ValueKey('create_habit'),
              onPressed: () async {
                await Navigator.of(context).push(HabitDraftRoute.create());
              },
              child: Icon(Icons.add, color: Colors.white),
            )
          : null,
...
